<resources>
    <string name="app_name">Athletics</string>

    <string name="dummytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="martialartls">Martial Arts</string>
    <string name="startnow">Start Now</string>
    <string name="login">Log in</string>
    <string name="continue_">Continue</string>
    <string name="not_available">N/A</string>
    <string name="forgot_password_">Forgot password</string>
    <string name="login_simple">Login</string>
    <string name="signup">Sign up</string>
    <string name="signup_">Sign Up</string>
    <string name="login_">Log In</string>
    <string name="join_us_to_view_the_athlets_profile">Join us to view the Athlete\'s profile</string>
    <string name="enter_your_email_and_password">Enter your emails and password</string>
    <string name="enter_email_to_reset_password">Enter email to reset password</string>
    <string name="enter_your_credential_to_continue">Enter your credential to continue</string>
    <string name="create_your_account">Create your account</string>
    <string name="email">Email*</string>
    <string name="username">Username</string>
    <string name="password">Password*</string>
    <string name="old_password">Old Password*</string>

    <string name="ok">OK</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="by_continuing_terms_of_service">By continuing you agree to our</string>
    <string name="terms_of_service"><font color='#A3195B'><b> Terms of Service</b></font></string>
    <string name="and_pricacy_policy">and</string>
    <string name="all">All</string>
    <string name="explore">Explore</string>
    <string name="follow">Follow</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="videos">Videos</string>
    <string name="visitor">Visitor</string>
    <string name="athlete">Athlete</string>
    <string name="school_club">School/Club</string>
    <string name="coach">Coach</string>
    <string name="athletics">Athletics</string>
    <string name="coaches">Coaches</string>
    <string name="result">Result</string>
    <string name="please_allow_app">Please allow app</string>
    <string name="pricacy_policy"><font color='#A3195B'><b> Privacy Policy.</b></font></string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_having_an_Account">Already having an account?</string>
    <string name="signup_simple">Signup</string>
    <string name="skip_login">Skip Login >>></string>
    <string name="you_can_select_only_two_position">You Can Select Only 2 positions</string>
    <string name="please_enter_your_email">Please enter your email id</string>
    <string name="please_enter_your_video_title">Please enter your video title</string>
    <string name="please_enter_valid_your_email">Please enter your valid email id</string>
    <string name="please_enter_your_profile_video">Please enter your profile video</string>
    <string name="please_enter_your_unique_code_given_by_your_school_club">Please enter your unique code given by your school or club</string>
    <string name="password_validation">Password must be at least 8 characters long and contain at least 1 capital 1 small letter, number and special character</string>
    <string name="check_internet_connection">Please check your internet connection..!!</string>
    <string name="Please_enter_your_actication_code">Please enter your activation code </string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>

    <string name="please_enter_your_current_password">Please enter your current password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="please_enter_your_confirm_password">Please enter your confirm password</string>
    <string name="password_and_confirm_password_not_match">Password and confirm password does not match !</string>


    <string name="next">Next</string>
    <string name="profie">Profile</string>
    <string name="profie_picture">Profile Picture</string>
    <string name="select_profile">Select Profile</string>
    <string name="select_video">Select Video</string>
    <string name="please_select_video">Please Select Video</string>
    <string name="please_select_thumbnail">Please Select Thumbnail</string>
    <string name="select_resume">Select Resume</string>
    <string name="video_profie">Video Profile</string>
    <string name="resume">Resume</string>
    <string name="resend_email">Resend Email</string>
    <string name="please_verify_your_email">Please Verify Your Email, we send it your email.</string>
    <string name="back_to_home">Back To Home</string>
    <string name="my_information">My Information</string>
    <string name="coach_profie">Coach Profile</string>
    <string name="basic_information">Basic Information</string>
    <string name="basic_info">Basic Info</string>
    <string name="extra_info">Extra Info</string>
    <string name="playing_information">Playing Information</string>
    <string name="sports_state">Sports Stats</string>
    <string name="athlete_profie">Athlete Profile</string>
    <string name="edit_profie">Edit profile</string>
    <string name="upload_video">Upload Video</string>
    <string name="upload_video_max_validation">The Limit Is Maximum Video Of 50mb And In Time It Should Be 60 Seconds Max.</string>
    <string name="upload_now">Upload Now</string>
    <string name="what_you_are_thinking_right_now">What you\'re thinking right now...</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="subscribe_package">Subscribe Package</string>
    <string name="your_code">Your Code</string>
    <string name="save_video">Save Video</string>
    <string name="save">Save</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit ?</string>
    <string name="downloading_video">Please Wait...</string>
    <string name="loading">Loading…</string>
    <string name="subscription_activation_code">Subscription Activation Code</string>
    <string name="acticate_now">Activate Now</string>
    <string name="download_resume">Download Resume</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="are_you_sure_you_want_to_delete_this_video">Are you sure you want to delete this video ?</string>
    <string name="only_athlete_upload_video">You can\'t upload video. Please login with athlete account an Upload Video !</string>
    <string name="please_login_first_to_continue_in_app">Please login first to continue in App !</string>
    <string name="rugby">Rugby</string>
    <string name="fieldhockey">Field Hockey</string>
    <string name="find_someone">Find someone</string>
    <string name="skip">Skip >>></string>
    <string name="like_video">Like Video</string>
    <string name="my_video">My Video</string>
    <string name="payments">Payments</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="personal_details_">Personal Details :</string>
    <string name="no_data_found">No data found</string>
    <string name="email_id_">Email ID :</string>
    <string name="sports_">Sports :</string>
    <string name="sports">Sports</string>
    <string name="positions_">Positions :</string>
    <string name="other_details">Other Details :</string>
    <string name="major_">Major :</string>
    <string name="major">Major</string>
    <string name="age_">Age :</string>
    <string name="age">Age</string>

    <string name="gender_">Gender :</string>
    <string name="gender">Gender</string>
    <string name="speed_">Speed :</string>
    <string name="speed">Speed</string>
    <string name="coach_experience">Coach Experience :</string>
    <string name="share_your_experience">Share your experience here</string>

    <string name="experience">Experience :</string>
    <string name="school_detail_">School Detail :</string>
    <string name="state_of">State of</string>
    <string name="university_name_">University Name :</string>
    <string name="university">University</string>
    <string name="scholastic_school_year">Scholastic school year</string>
    <string name="school_">School :</string>
    <string name="school">School</string>
    <string name="team_name">Team Name (If Applicable)</string>
    <string name="team_name_">Team Name</string>
    <string name="school_year_complete_">School Year Complete :</string>
    <string name="year">Year</string>
    <string name="gpa_">GPA :</string>
    <string name="gpa">GPA</string>
    <string name="about_us">About Us</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="paying_weight">Paying Weight</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="package_detail">Package Details</string>
    <string name="rate_us">Rate Us</string>
    <string name="check_for_update">Check for Update</string>
    <string name="choose_your_premium_plans">Choose your premium plans</string>
    <string name="logout">Logout</string>
    <string name="you_hant_pic_image">You haven\'t picked image</string>
    <string name="you_can_not_back_without_verify">You can\'t back without verify.</string>
    <string name="you_have_activation_code">You have activation code ?</string>
    <string name="plan_expired_at">Plan Expired at</string>
    <string name="click_here">Click Here</string>
    <string name="buy_now">Buy Now</string>
    <string name="select_picture">Select picture</string>
    <string name="select_an_Action">Select an action</string>
    <string name="allow_access_camera_gallery">Allow Aalaf qatar to access this device\'s Camera &amp; Gallery?</string>
    <string name="want_to_change_your_password"><u>Want to change your password?</u></string>

</resources>