<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelCoachInformationMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context="com.example.athletics.Activity.MyProfileActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbarwith_back" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bootomMenu"
        android:layout_below="@+id/toolbar">


        <LinearLayout
            android:id="@+id/LLCoachInformationMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/sports_"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_coach_category" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/positions_"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPositions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_coach_category" />

                <TextView
                    android:id="@+id/TvNodataFoundPositions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center"
                    android:text="@string/no_data_found"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/experience"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edittext">

                    <EditText
                        android:id="@+id/edtExperience"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_gravity="start"
                        android:background="@null"
                        android:fontFamily="@font/rubik_regular"
                        android:gravity="start"
                        android:hint="@string/share_your_experience"
                        android:inputType="textMultiLine"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/other_details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/profie_picture"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10ssp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/TvProfilePic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableRight="@drawable/ic_gallery"
                            android:fontFamily="@font/rubik_medium"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingRight="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:text="@string/select_picture"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/TvProfileName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:fontFamily="@font/rubik_medium"
                            android:gravity="center"
                            android:text="@string/profie_picture"
                            android:textColor="@color/blur_color_fulldark"
                            android:textSize="@dimen/_10ssp"
                            android:visibility="gone" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/video_profie"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10ssp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/TvUploadVideo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableRight="@drawable/ic_video"
                            android:fontFamily="@font/rubik_medium"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingRight="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:text="@string/select_video"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/TvVideoName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:fontFamily="@font/rubik_medium"
                            android:gravity="center"
                            android:text="@string/profie_picture"
                            android:textColor="@color/blur_color_fulldark"
                            android:textSize="@dimen/_10ssp"
                            android:visibility="gone" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/resume"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10ssp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/TvResumeUpload"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableRight="@drawable/ic_info"
                            android:fontFamily="@font/rubik_medium"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingRight="@dimen/_3sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:text="@string/select_resume"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/TvResumeName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:fontFamily="@font/rubik_medium"
                            android:gravity="center"
                            android:text="@string/profie_picture"
                            android:textColor="@color/blur_color_fulldark"
                            android:textSize="@dimen/_10ssp"
                            android:visibility="gone" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/TvSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/rubik_bold"
                    android:gravity="center"
                    android:letterSpacing="0.05"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />


            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/bootomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/bottom_menu" />

    </LinearLayout>


</RelativeLayout>