<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dp"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvDialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="@string/are_you_sure_you_want_to_exit" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDialogCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />


        <TextView
            android:id="@+id/tvDialogok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black" />


    </LinearLayout>

</LinearLayout>