<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llIntroSliderMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"

            >

            <RelativeLayout
                android:id="@+id/llheader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/img"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_220sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:src="@drawable/slider_one" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/rubik_bold"
                    android:gravity="center"
                    android:text="@string/martialartls"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_32ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center"
                    android:text="@string/dummytext"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_15ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_details"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvNext"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:background="@drawable/bg_button"
                        android:fontFamily="@font/rubik_medium"
                        android:gravity="center"
                        android:paddingLeft="@dimen/_28sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingRight="@dimen/_28sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:text="@string/next"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>



